--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "vonzie-database",
+  "name": "chaosssdb",
   "version": "1.0.0",
-  "description": "Web database nomor WhatsApp dengan API routes dan penyimpanan JSON",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "vercel dev",
-    "start": "vercel start"
+    "start": "node api/get.js"
   },
   "dependencies": {
-    "fs-extra": "^11.1.1"
-  },
-  "type": "module"
+    "fs": "^0.0.1-security"
+  }
 }
